--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
+body{
+  height: 100vh;
+} 
 
 :root {
   --foreground-rgb: 0, 0, 0;
